Fixed footer clipping pixel

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -235,18 +235,11 @@ a {
   line-height: 0;
   margin: 0;
 }
-// #resources .row>div {
-//   @media screen and (max-width: $BP_MD) {
-//     max-width: 500px;
-//     margin: 30px auto;
-//     float: none;
-//   }
-// }
 .sd-link-top {
   position: fixed;
   bottom: 50px;
   left: 50px;
-  color: #fff;
+  color: $white;
   z-index: 4;
   border: none;
   display: none;
@@ -256,7 +249,7 @@ a {
     font-size: 48px;
   }
   @media screen and (max-width: $BP_MD) {
-    color: white;
+    color: $white;
   }
   @media screen and (max-width: $BP_XL) {
     position: absolute;
